--- a/Welcome.css
+++ b/Welcome.css
@@ -4,7 +4,7 @@ body {
   url(https://wallpapercave.com/wp/CdBbiZ7.jpg);
 }
 h1 {
-  padding-top: 100px;
+  padding-top: 6%;
 }
 .weather {
   font-size: 2rem;
@@ -34,6 +34,9 @@ form {
 #output p{
   font-size: 16px;
 }
+.btn-lg {
+  margin-top: 6%;
+}
 h2 {
   margin: 0;
   font-size: 2.5rem;
@@ -51,13 +54,14 @@ p {
   font-size: 2rem;
 }
 img {
+    margin-top: 6%;
   margin-left: 2%;
   cursor: pointer;
   width: auto;
   height: 45px;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1000px) {
   h1 {
     font-size: 10rem;
   }
@@ -76,4 +80,7 @@ img {
   p {
     font-size: 3rem;
   }  
+  hr {
+    border: none;
+  }
 }
