--- a/Welcome.css
+++ b/Welcome.css
@@ -67,11 +67,16 @@ img {
   }
   .weather {
     font-size: 2rem;
+    margin: 3% 25%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;   
+    justify-content: center;   
     font-size: 3rem;
-  }  
+  } 
+  .weather div {
+    width: 40%;
+    text-align: center;
+  } 
   #output{
     display: inline-block;
     margin-top: 2%;
