--- a/Welcome.css
+++ b/Welcome.css
@@ -1,7 +1,8 @@
 body {
   font-size: 32px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) 50%),
-  url(https://wallpapercave.com/wp/CdBbiZ7.jpg);
+  url(night.jpg);
+  text-shadow: 2px 0 0 black, -2px 0 0 black, 0 2px 0 black, 0 -2px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
 }
 h1 {
   padding-top: 6%;
@@ -17,7 +18,6 @@ h1 {
 .row button {
   box-shadow: 3px 3px 5px #333;
 }
-
 form {
   margin-top: 2%;  
   display: flex;
@@ -33,6 +33,7 @@ form {
 }
 #output p{
   font-size: 16px;
+  text-shadow: none;
 }
 .btn-lg {
   margin-top: 6%;
@@ -40,13 +41,14 @@ form {
 h2 {
   margin: 0;
   font-size: 2.5rem;
+  text-shadow: none;  
 } 
 a, a:hover {
   color: #333;
   text-decoration: none;
 }
 .well {
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.8);
   padding: 3%;
 }
 p {
