--- a/Welcome.css
+++ b/Welcome.css
@@ -1,10 +1,20 @@
 body {
-  font-size: 32px;
+  height: 100%;
+  overflow-x: hidden; 
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) 50%),
   url(night.jpg);
   text-shadow: 2px 0 0 black, -2px 0 0 black, 0 2px 0 black, 0 -2px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-attachment: fixed;
+  font: bold 32px/1.5 Helvetica, Arial, sans-serif;
+  color: white;
+  text-align: center; 
 }
 h1 {
+  font-weight: bold; 
   padding-top: 6%;
 }
 .weather {
