--- a/Welcome.css
+++ b/Welcome.css
@@ -28,6 +28,11 @@ h1 {
 .row button {
   box-shadow: 3px 3px 5px #333;
 }
+#tweetLink {
+  background: none;
+  border: none;
+  box-shadow: none;
+}
 form {
   margin-top: 2%;  
   display: flex;
